<resources>
    <string name="app_name">ChangeExChain</string>
    <string name="chain">Chain</string>
    <string name="time_format">Time Format</string>
    <string name="currency_pref">Currency Preference</string>
    <string name="theme">Theme</string>
    <string name="theme1">Default</string>
    <string name="theme2">Dark</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="coindesk_link"><a href="https://www.coindesk.com/price/">Powered by CoinDesk</a></string>
    <string name="price_placeholder">$8000.00</string>
    <string name="currency_code_placeholder">USD</string>
    <string name="spinner_title">Supported Currencies</string>
    <string name="radio_threshold">Price Threshold</string>
    <string name="above_threshold">Above</string>
    <string name="below_threshold">Below</string>
    <string name="alarm_threshold_placeholder">Above</string>
    <string name="alarm_enabled_placeholder">Enabled</string>
    <string name="save_settings">Save Settings</string>
    <string name="add_alarm">Save Alarm</string>
    <string name="alarm_enabled">Enabled</string>
    <string name="channel_name">ChangeExChain_Channel</string>
    <string name="channel_description">ChangeExChain channel for notifications</string>
</resources>
