<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Switch
        style="?android:listSeparatorTextViewStyle"
        android:id="@+id/exchain_timeformat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_format"/>

    <Spinner
        android:id="@+id/exchain_currency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/currency"/>

    <TextView
        android:id="@+id/alarm_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theme"/>
    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/theme1" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme2" />
    </RadioGroup>
</LinearLayout>