<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/spinner_title" />

    <EditText
        android:id="@+id/exAlarmPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:hint="Enter the Price"
        android:inputType="numberSigned"
        android:paddingBottom="15dp"
        android:textSize="25dp" />
    <RadioGroup
        android:id="@+id/radioGroupThreshold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/aboveThreshold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/above_threshold" />

        <RadioButton
            android:id="@+id/belowThreshold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/below_threshold" />
    </RadioGroup>

</LinearLayout>